# kedro-slurm

./: README.md  pyproject.toml
.github/workflows/: linting.yml
src/kedro_slurm/: runners.py  slurm.py
src/kedro_slurm/pipeline/: node.py
src/kedro_slurm/runner/: slur_runner.py  slurm_runner.py
